--- a/src/components/BookItem/index.css
+++ b/src/components/BookItem/index.css
@@ -2,20 +2,18 @@
   .book-item-list-container {
     display: flex;
     flex-direction: row;
-    margin-right: 15px;
     margin-bottom: 15px;
-    border-color: transparent;
   }
   .book-item-btn {
     border-style: none;
     border-radius: 20px;
+    background-color: transparent;
   }
   .book-item-cover-pic {
-    height: 30vh;
-    width: 10vw;
+    height: 150px;
+    width: 150px;
     margin: 0px;
     padding: 0px;
-    border-radius: 10px;
   }
   .book-item-details-card-container {
     width: 10vw;
@@ -27,14 +25,15 @@
     font-family: Roboto;
   }
   .book-item-title {
-    font-size: 10px;
+    font-size: 13px;
   }
   .book-item-author-name {
-    font-size: 8px;
+    font-size: 10px;
     margin-top: 0;
   }
   .book-item-avg-rating-container {
     display: flex;
+    margin-top: 0px;
   }
   .book-item-avg-rating {
     font-size: 10px;
@@ -56,7 +55,7 @@
     color: rgb(0, 81, 255);
   }
   .book-item-rating {
-    font-size: 12px;
+    font-size: 11px;
     margin-top: 0px;
   }
 }
