--- a/src/components/BookShelves/index.css
+++ b/src/components/BookShelves/index.css
@@ -9,8 +9,7 @@
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
-
-    width: 20%;
+    width: 20vw;
     border-radius: 5px;
     height: 100vh;
   }
@@ -22,6 +21,8 @@
   }
   .filter-un-order-list-container {
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
   }
   .active-filter-list-lg {
     border: none;
@@ -75,9 +76,10 @@
   .bookList-container {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 100px;
     align-items: center;
-    width: 800px;
     justify-content: space-between;
+    width: 700px;
   }
   .loader-container {
     display: flex;
