--- a/src/components/BookShelves/index.css
+++ b/src/components/BookShelves/index.css
@@ -39,6 +39,10 @@
   .active-filter-lg {
     color: #0284c7;
   }
+  .active-filter-list-btn {
+    border: none;
+    background-color: transparent;
+  }
   .large-container {
     display: flex;
     flex-direction: column;
@@ -86,7 +90,10 @@
     flex-direction: column;
     align-items: center;
   }
-  .bookShelves-small-container {
+  .search-input-container-sm {
+    display: none;
+  }
+  .books-list-small {
     display: none;
   }
 }
@@ -99,8 +106,54 @@
 
 @media screen and (max-width: 786px) {
   .book-shelves-bg-container-lg {
+    background-color: rgb(217, 222, 226);
+    display: flex;
+    flex-direction: column;
+    padding-top: 60px;
+    align-items: flex-start;
+
+    padding-left: 20px;
+  }
+  .bookshelves-heading-lg {
+    font-size: 20px;
+    font-family: 'Roboto';
+    margin-top: 20px;
+    font-weight: 600;
+  }
+  .filter-un-order-list-container {
+    display: flex;
+    flex-direction: row;
+    padding: 0px;
+    flex-wrap: wrap;
+  }
+  .active-filter-lg {
+    background-color: #0284c7;
+    color: #ffffff;
+    height: 26px;
+    border-radius: 40px;
+    padding: 5px;
+  }
+  .active-filter-list-lg {
+    list-style-type: none;
+    border: 2px solid #0284c7;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    border-radius: 40px;
+    height: 28px;
+    padding: 5;
+  }
+  .active-filter-list-btn {
+    border: none;
+    background-color: transparent;
+    color: #0284c7;
+  }
+  .filtered-books-heading {
     display: none;
   }
+  .search-input-container {
+    display: none;
+  }
+
   .bookShelves-small-container {
     background-color: rgb(217, 222, 226);
     display: flex;
@@ -110,7 +163,8 @@
 
     padding-left: 20px;
   }
-  .search-input-container {
+
+  .search-input-container-sm {
     border: 1px solid grey;
   }
   .search-container {
